--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
     <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
     <style>
@@ -84,10 +85,6 @@
         $(document).ready(function() {
 
         });
-        function setId(id) {
-            $("#personId").val(id);
-            this.submit;
-        }
     </script>
 </head>
 <body>
@@ -117,12 +114,21 @@
                     </div>
                     <div class="col" style="text-align: center">
                         <br>
-                        <form class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/userCard}">
-                            <div name="personId" id="personId" style="visibility: hidden"></div>
-                            <button id="personButton" th:onclick="'setId(' + ${person.getId()} + ')'" class="btn btn-outline-primary me-2" style="background-color: transparent; color: black; border-color: transparent">
+                        <form th:id="${person.getId()}" class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/userCard}">
+                            <input name="personId" id="personId" style="visibility: hidden">
+                            <button class="btn btn-outline-primary me-2" style="background-color: transparent; color: black; border-color: transparent" type="submit">
                                 <img src="/static/images/open.png" alt="Аккаунт" height="100" width="100">
                             </button>
                         </form>
+                        <script>
+                            // Обработчик отправки формы
+                            $("form.needs-validation").on("submit", function (event) {
+                                event.preventDefault(); // Предотвращаем отправку формы по умолчанию
+                                // Устанавливаем значения скрытых полей формы
+                                $(this).find("input[name='personId']").val(this.id);
+                                this.submit();
+                            });
+                        </script>
                     </div>
                 </div>
             </div>
